# hopon_pruebas

./: CORS_FIX.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_QUICK_REFERENCE.md  MOBILE_APP_SETUP.md  PWA_QUICK_START.md
backend/: Dockerfile  app.py  models.py  pyproject.toml
frontend/: next.config.ts  package-lock.json  package.json
frontend/public/: manifest.json  sw.js
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/auth/setup-username/: page.tsx
frontend/src/app/create/: page.tsx
frontend/src/app/discover/: page.tsx
frontend/src/app/events/: page.tsx
frontend/src/app/home/: page.tsx
frontend/src/app/home/profile/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/components/: account-setup-modal.tsx  delete-account-modal.tsx  error-boundary.tsx  event-card.tsx  event-details-modal.tsx  location-picker.tsx  map-display.tsx  pwa-installer.tsx  top-nav.tsx  user-card.tsx  web-layout.tsx
frontend/src/context/: auth-context.tsx
frontend/src/hooks/: useUserLocation.ts
frontend/src/lib/: api.ts  error-handler.ts  google-maps-loader.ts  sports-emoji.ts  sports.ts
scripts/: generate-render-env.sh
